mature the deploy script more

--- a/openshift_template.yml
+++ b/openshift_template.yml
@@ -56,4 +56,4 @@
   parameters:
     -
       name: "image_url"
-      value: "{OPENSHIFT_URL}/aws_tools/aws-ad-accounts-sync"
+      value: "registry.paas.symcpe.com:443/aws_tools/aws-ad-accounts-sync"
